refactor: Adjust tests and code for improved readability and consistency across modules